Remove noindex meta tag

--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="robots" content="noindex, nofollow" />
+    <meta name="description" content="Browse libLISA's 120,000 automatically generated x86-64 instruction semantics. The x86-64 semantics are CPU-specific and include undefined behavior.">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore - libLISA</title>
